mobile menu kick in earlier to prevent overflow

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,5 +1,5 @@
 // Breakpoints
-$medium-screen: 600px;
+$medium-screen: 770px;
 $large-screen: 900px;
 $vl-screen: 1080px;
 $xl-screen: 1400px;
